add tests + update base_test + views package
